# omicidx-gh-etl

./: .gitignore  DEPLOYMENT.md  EXPORT_DEPLOYMENT.md  MAINTENANCE_IMPROVEMENTS.md  OBSERVABILITY_PLAN.md  README.md  REFACTORING_SUMMARY.md  SCHEMA_IMPROVEMENTS.md  WAREHOUSE.md  WAREHOUSE_SUMMARY.md  app.py  daily.sh  daily_pipeline.sh  main.sql  omicidx_warehouse.duckdb  pyproject.toml  test_biosample_extract.py  test_schema_enforcement.py  warehouse.yml  warehouse.yml.example
.github/workflows/: base_runner.yaml  daily.yaml  etl.yaml  geo.yaml  icite.yaml  ncbi_biosample.yaml  ncbi_sra_etl.yaml  ncbi_sra_test_etl.yaml  pubmed_etl.yaml  reporter.yaml  scimago.yaml  test-runner.yml
examples/: warehouse_quickstart.py
omicidx/: app.py
omicidx_etl/: catalog.py  cli.py  config.py  db.py  logging.py  nih_reporter.py  status.py  transform.py  warehouse_cli.py
omicidx_etl/biosample/: cli.py  etl.py  extract.py  load.py  schema.py
omicidx_etl/ebi_biosample/: extract.py
omicidx_etl/etl/: app.py  biosample.py  biosample_load.py  cli_pubmed.py  config.py  db.py  europepmc_textmined.py  icite.py  pubmed.py  pubmed_dbos.py  pubmed_load.py  scimago.py  sra.py  sra_load.py
omicidx_etl/etl/biosample/: extract.py  load.py
omicidx_etl/geo/: etl.py  extract.py  load.py  schema.py
omicidx_etl/sra/: README.md  cli.py  etl.py  extract.py  schema.py  sra_monthly.sh  state.py  utils.py
omicidx_etl/transformations/: README.md  __init__.py  biosample.py  config.py  create_raw.py  deploy.py  geo.py  sra.py  warehouse.py
omicidx_etl/transformations/models/: README.md
omicidx_etl/transformations/models/loading/: load_src_geo_samples.sql  load_src_geo_series.sql  load_src_ncbi_bioprojects.sql  load_src_ncbi_biosamples.sql  load_src_sra_accessions.sql  load_src_sra_experiments.sql  load_src_sra_runs.sql  load_src_sra_samples.sql  load_src_sra_studies.sql
omicidx_etl/transformations/models/mart/: README.md  schema.yml  sra_metadata.sql
omicidx_etl/transformations/models/raw/: geo_platforms.sql  geo_samples.sql  geo_series.sql  ncbi_bioprojects.sql  ncbi_biosamples.sql  schema.yml  sra_accessions.sql  sra_experiments.sql  sra_runs.sql  sra_samples.sql  sra_studies.sql
omicidx_etl/transformations/models/staging/: schema.yml  stg_geo_platforms.sql  stg_geo_samples.sql  stg_geo_series.sql  stg_ncbi_bioprojects.sql  stg_ncbi_biosamples.sql  stg_sra_accessions.sql  stg_sra_experiments.sql  stg_sra_runs.sql  stg_sra_samples.sql  stg_sra_studies.sql
scripts/: biosample_monthly.sh
sqlmesh/: .env.example  .gitignore  README.md  config.yaml
sqlmesh/models/bronze/: stg_ebi_biosample.sql  stg_geo_platforms.sql  stg_geo_samples.sql  stg_geo_series.sql  stg_ncbi_bioproject.sql  stg_ncbi_biosample.sql  stg_sra_accessions.sql  stg_sra_experiments.sql  stg_sra_runs.sql  stg_sra_samples.sql  stg_sra_studies.sql
sqlmesh/models/geometadb/: geo_supplemental_files.sql  gpl.sql  gse.sql  gse_gpl.sql  gse_gsm.sql  gsm.sql
sqlmesh/models/raw/: src_ebi_biosample.sql  src_geo_platforms.sql  src_geo_samples.sql  src_geo_series.sql  src_ncbi_bioproject.sql  src_ncbi_biosample.sql  src_sra_accessions.sql  src_sra_experiments.sql  src_sra_runs.sql  src_sra_samples.sql  src_sra_studies.sql
sqlmesh/tests/: test_stg_ebi_biosample.yaml  test_stg_geo_platforms.yaml  test_stg_geo_samples.yaml  test_stg_geo_series.yaml  test_stg_ncbi_bioproject.yaml  test_stg_ncbi_biosample.yaml
